--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "elm-live src/Main.elm"
+    "build": "rm ./dist/main.js && elm make src/Main.elm --output ./dist/main.js",
+    "dev": "elm-live src/Main.elm -- --output=./dist/main.js"
   },
   "author": "",
   "license": "ISC",
